--- a/package.json
+++ b/package.json
@@ -12,19 +12,25 @@
     "@mantine/carousel": "^7.6.2",
     "@mantine/charts": "^7.6.2",
     "@mantine/code-highlight": "^7.6.2",
-    "@mantine/core": "^7.6.2",
+    "@mantine/core": "^7.7.0",
     "@mantine/dates": "^7.6.2",
     "@mantine/dropzone": "^7.6.2",
     "@mantine/form": "^7.6.2",
-    "@mantine/hooks": "^7.6.2",
+    "@mantine/hooks": "^7.7.0",
     "@mantine/modals": "^7.6.2",
     "@mantine/notifications": "^7.6.2",
     "@mantine/nprogress": "^7.6.2",
     "@mantine/spotlight": "^7.6.2",
-    "@mantine/tiptap": "^7.6.2",
+    "@mantine/tiptap": "^7.7.0",
     "@mantinex/mantine-logo": "^1.0.1",
     "@tabler/icons-react": "^3.1.0",
+    "@tiptap/extension-highlight": "^2.2.4",
     "@tiptap/extension-link": "^2.2.4",
+    "@tiptap/extension-subscript": "^2.2.4",
+    "@tiptap/extension-superscript": "^2.2.4",
+    "@tiptap/extension-text-align": "^2.2.4",
+    "@tiptap/extension-underline": "^2.2.4",
+    "@tiptap/pm": "^2.2.4",
     "@tiptap/react": "^2.2.4",
     "@tiptap/starter-kit": "^2.2.4",
     "dayjs": "^1.11.10",
