--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-pdf": "^7.7.1",
     "recharts": "^2.12.2"
   },
   "devDependencies": {
