--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "dayjs": "^1.11.10",
     "embla-carousel-react": "^8.0.0",
     "next": "14.1.3",
+    "openai": "^4.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-pdf": "^7.7.1",
