--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.20.2",
     "@mantine/carousel": "^7.6.2",
     "@mantine/charts": "^7.6.2",
     "@mantine/code-highlight": "^7.6.2",
@@ -34,6 +35,7 @@
     "@tiptap/react": "^2.2.4",
     "@tiptap/starter-kit": "^2.2.4",
     "dayjs": "^1.11.10",
+    "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.0.0",
     "next": "14.1.3",
     "openai": "^4.0.0",
