--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "dayjs": "^1.11.10",
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.0.0",
-    "next": "14.1.3",
+    "next": "^14.2.16",
     "openai": "^4.0.0",
     "react": "^18",
     "react-dom": "^18",
